--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[08/2023] Two papers are accepted by CIKM 2023. </li>
 	<li type="circle">[07/2023] I will serve as a Session Chair for the ADS track at KDD 2023. </li>
 	<li type="circle">[07/2023] I will serve as a reviewer for TKDD 2023. </li>
 	<li type="circle">[07/2023] I was invite to give an academic talk by AI TIME, Beijing, China. </li>
@@ -144,6 +145,16 @@
 <h2>Publications</h2>
 
 <h3>Conferences</h3>
+<p>
+	<strong>[CIKM'23]</strong> Adaptation Speed Analysis for Fairness-aware Causal Models. </br>
+	Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao and Haifeng Chen.<br/>
+	<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper, oral</strong>), 2023
+</p>
+<p>
+	<strong>[CIKM'23]</strong> Contrastive Representation Learning Based on Multiple Node-centered Subgraphs. </br>
+	Dong Li, Wenjun Wang, Minglai Shao, <font color=red>Chen Zhao</font>.<br/>
+	<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper, oral</strong>), 2023
+</p>
 <p>
 	<strong>[KDD'23]</strong> Towards Fair Disentangled Online Learning for Changing Environments. <a class="btn btn-red" href="https://arxiv.org/pdf/2306.01007.pdf">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Christan Earl Grant, Feng Chen.<br/>
