--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 					<br>
 					
 					Email:  <a href="chen_zhao@baylor.edu">chen_zhao@baylor.edu</a><br>
-					<br>
+					<be>
+					<a href="./files/Chen_Zhao_CV.pdf"> <img src="./files/logo-cv.png" height="30px" style="margin-bottom:-3px; margin-right: 10px"> </a>
 					<a href="https://github.com/charliezhaoyinpeng"> <img src="./files/logo-github.png" height="30px" style="margin-bottom:-3px; margin-right: 10px"> </a>
 					<a href="https://scholar.google.com/citations?user=xebNvXQAAAAJ&hl=en"> <img src="./files/logo-googlescholar.png" height="30px" style="margin-bottom:-3px; margin-right: 10px"> </a>
 					<a href="https://www.linkedin.com/in/chenzhaoutd"> <img src="./files/logo-linkin.png" height="30px" style="margin-bottom:-3px; margin-right: 10px"> </a>
