--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
 	</tbody>
 </table>
 
+<p style="text-align:justify;background-color:#D6DBDF">
+	I am always looking for students with <strong> high motivations</strong> and <strong>strong coding skills</strong> to join my research group or work with me as summer interns. 
+	There are several RA openings for graduate students in my lab at Baylor University. 
+	These positions are supported by a monthly stipend and tuition waiver. 
+	Students are expected to work closely with me on several research projects. Applicants with a degree in related fields (<em>e.g.,</em> CS/CE/EE/STAT) are preferred. 
+	Research background in machine learning, artificial intelligence, data mining, big data, and statistics is desired.
+	If you are interested, please email me your application materials (<em>e.g.,</em> Curriculum Vitae, Publications, GitHub/GitLab Accounts, Undergraduate/Graduate Transcripts, Personal Statement, and GRE/TOEFL Reports).
+</p>
+	
 <h2>Biography</h2>
 	<p style="text-align:justify;">
 		Dr. Chen Zhao is an Assistant Professor in the Department of Computer Science at Baylor University. 
