--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 	</tbody>
 </table>
 
-<p style="text-align:justify;background-color:#D6DBDF">
-	I am always looking for students with <strong> high motivations</strong> and <strong>strong coding skills</strong> to join my research group or work with me as summer interns. 
+<p style="text-align:justify;background-color:#F2F3F4">
+	<strong>To Prospective Students</strong>: I am always looking for students with <strong> high motivations</strong> and <strong>strong coding skills</strong> to join my research group or work with me as summer interns. 
 	There are several RA openings for graduate students in my lab at Baylor University. 
 	These positions are supported by a monthly stipend and tuition waiver. 
 	Students are expected to work closely with me on several research projects. Applicants with a degree in related fields (<em>e.g.,</em> CS/CE/EE/STAT) are preferred. 
