--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	There are several RA openings for graduate students in my lab at Baylor University. 
 	These positions are supported by a monthly stipend and tuition waiver. 
 	Students are expected to work closely with me on several research projects. Applicants with a degree in related fields (<em>e.g.,</em> CS/CE/EE/STAT) are preferred. 
-	Research background in machine learning, artificial intelligence, data mining, big data, and statistics is desired.
+	Research backgrounds in machine learning, artificial intelligence, data mining, big data, and statistics are desired.
 	If you are interested, please email me your application materials (<em>e.g.,</em> Curriculum Vitae, Publications, GitHub/GitLab Accounts, Undergraduate/Graduate Transcripts, Personal Statement, and GRE/TOEFL Reports).
 </p>
 	
