--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 	Students are expected to work closely with me on several research projects. Applicants with a degree in related fields (<em>e.g.,</em> CS/CE/EE/STAT) are preferred. 
 	Research backgrounds in machine learning, artificial intelligence, data mining, big data, and statistics are desired.
 	If you are interested, please email me your application materials (<em>e.g.,</em> Curriculum Vitae, Publications, GitHub/GitLab Accounts, Undergraduate/Graduate Transcripts, Personal Statement, and GRE/TOEFL Reports).
+	<br>
+	<em>NOTE: Unfortunately, due to the volume of emails, I will not response to all of them.</em>
 </p>
 	
 <h2>Biography</h2>
