--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<tr>
 			<td width="720px">
 				<div id="toptitle">
-					<h1>Chen Zhao, Ph.D. &nbsp; </h1>
+					<h1>Chen Zhao, Ph.D. (赵辰) &nbsp; </h1>
 				</div>
 				<p>
 					Assistant Professor<br>
