--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	Research backgrounds in machine learning, artificial intelligence, data mining, big data, and statistics are desired.
 	If you are interested, please email me your application materials (<em>e.g.,</em> Curriculum Vitae, Publications, GitHub/GitLab Accounts, Undergraduate/Graduate Transcripts, Personal Statement, and GRE/TOEFL Reports).
 	<br>
-	<em>NOTE: Unfortunately, due to the volume of emails, I will not response to all of them.</em>
+	<em>NOTE: Unfortunately, due to the volume of emails, I will not respond to all of them.</em>
 </p>
 	
 <h2>Biography</h2>
@@ -119,8 +119,8 @@
 		He received dual M.S. degrees in Computer Science and Biomedical Science from <a href="https://www.albany.edu/">University at Albany, SUNY</a> and <a href="https://www.amc.edu/academic/">Albany Medical College</a> in 2016. 
 		<br>
 		<br>
-		His researches focus on machine learning, data mining, and artificial intelligence, particularly fairness-aware machine learning, novelty detection, and domain generalization.
-		His publications have appeared in prestigious conferences and journals including KDD, CVPR, WWW, AAAI, ICDM, ICASSP, etc. 
+		His research focuses on machine learning, data mining, and artificial intelligence, particularly fairness-aware machine learning, novelty detection, and domain generalization.
+		His publications have appeared in prestigious conferences and journals, including KDD, CVPR, WWW, AAAI, ICDM, ICASSP, etc. 
 		He has served as PC members for several international conferences and workshops, such as NeurIPS, KDD, AAAI, IJCAI, ICML, etc.
 	</p>
 
@@ -129,11 +129,11 @@
 	<li type="circle">[08/2023] Two papers are accepted by CIKM 2023. </li>
 	<li type="circle">[07/2023] I will serve as a Session Chair for the ADS track at KDD 2023. </li>
 	<li type="circle">[07/2023] I will serve as a reviewer for TKDD 2023. </li>
-	<li type="circle">[07/2023] I was invite to give an academic talk by AI TIME, Beijing, China. </li>
-	<li type="circle">[05/2023] I will serve as a reviewer for SPIGM workshop at ICML 2023. </li>
-	<li type="circle">[05/2023] I was invite to give an academic talk by Yunnan University, Kunming, China. </li>
-	<li type="circle">[05/2023] I was invite to give an academic talk by Southwestern University of Fiance and Economics, Chengdu, China. </li>
-	<li type="circle">[05/2023] I was invite to give an academic talk by AI TIME, Beijing, China. </li>
+	<li type="circle">[07/2023] I was invited to give an academic talk by AI TIME, Beijing, China. </li>
+	<li type="circle">[05/2023] I will serve as a reviewer for the SPIGM workshop at ICML 2023. </li>
+	<li type="circle">[05/2023] I was invited to give an academic talk by Yunnan University, Kunming, China. </li>
+	<li type="circle">[05/2023] I was invited to give an academic talk by the Southwestern University of Finance and Economics, Chengdu, China. </li>
+	<li type="circle">[05/2023] I was invited to give an academic talk by AI TIME, Beijing, China. </li>
 	<li type="circle">[05/2023] One paper was accepted by KDD 2023. </li>
 	<li type="circle">[05/2023] I will serve as a PC member for CIKM 2023. </li>
 	<li type="circle">[04/2023] I will join Baylor University as a tenure-track Assistant Professor in the Department of Computer Science. </li>
@@ -141,7 +141,7 @@
 	<li type="circle">[04/2023] I was invited to give an academic talk by Indiana State University, Terre Haute, IN. </li>
 	<li type="circle">[03/2023] I was invited to give an academic talk by SUNY at Albany, Albany NY. </li>
 	<li type="circle">[03/2023] I was invited to give an academic talk by Tennessee State University, Nashville TN. </li>
-	<li type="circle">[03/2023] Two workshop proposals were accepted by KDD 2023. I will serve as organizers and chairs. </li>
+	<li type="circle">[03/2023] Two workshop proposals were accepted by KDD 2023. I will serve as organizer and chair. </li>
 	<li type="circle">[03/2023] I will serve as a PC member for IEEE Bigdata 2023. </li>
 	<li type="circle">[02/2023] One paper was accepted by CVPR 2023. </li>
 	<li type="circle">[02/2023] I will serve as a PC member for ICDM 2023. </li>
@@ -158,12 +158,12 @@
 
 <h3>Conferences</h3>
 <p>
-	<strong>[CIKM'23]</strong> Adaptation Speed Analysis for Fairness-aware Causal Models. </br>
+	<strong>[CIKM'23]</strong> Adaptation Speed Analysis for Fairness-aware Causal Models. <a class="btn btn-red" href="https://arxiv.org/pdf/2308.16879.pdf">PDF</a></br>
 	Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao and Haifeng Chen.<br/>
 	<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper, oral</strong>), 2023
 </p>
 <p>
-	<strong>[CIKM'23]</strong> Contrastive Representation Learning Based on Multiple Node-centered Subgraphs. </br>
+	<strong>[CIKM'23]</strong> Contrastive Representation Learning Based on Multiple Node-centered Subgraphs. <a class="btn btn-red" href="https://arxiv.org/pdf/2308.16441.pdf">PDF</a></br>
 	Dong Li, Wenjun Wang, Minglai Shao, <font color=red>Chen Zhao</font>.<br/>
 	<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper, oral</strong>), 2023
 </p>
