--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[09/2023] I will serve as a reviewer for ICLR 2024. </li>
 	<li type="circle">[08/2023] Two papers are accepted by CIKM 2023. </li>
 	<li type="circle">[07/2023] I will serve as a Session Chair for the ADS track at KDD 2023. </li>
 	<li type="circle">[07/2023] I will serve as a reviewer for TKDD 2023. </li>
@@ -291,6 +292,7 @@
 <h2>Academic Services</h2>
   <h3>Conference PC Member and Reviewer</h3>
     	<ul>
+		<li type="disc"> [Reviewer] International Conference on Learning Representations (ICLR), 2024.</li>
 		<li type="disc"> [Reviewer] The Conference on Neural Information Processing Systems (NeurIPS), 2023.</li>
 		<li type="disc"> [PC Member on Research and Applied Science Tracks] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
 		<li type="disc"> [PC Member] European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023.</li>
