--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[09/2023] I will serve as a reviewer for SDM 2024. </li>
 	<li type="circle">[09/2023] I will serve as a reviewer for AISTATS 2024. </li>
 	<li type="circle">[09/2023] I will serve as a reviewer for ICLR 2024. </li>
 	<li type="circle">[08/2023] Two papers are accepted by CIKM 2023. </li>
