--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-	<li type="circle">[09/2023] I will serve as a reviewer for SDM 2024. </li>
+	<li type="circle">[09/2023] I will serve as a PC member for SDM 2024. </li>
 	<li type="circle">[09/2023] I will serve as a reviewer for AISTATS 2024. </li>
 	<li type="circle">[09/2023] I will serve as a reviewer for ICLR 2024. </li>
 	<li type="circle">[08/2023] Two papers are accepted by CIKM 2023. </li>
@@ -295,6 +295,7 @@
   <h3>Conference PC Member and Reviewer</h3>
     	<ul>
 		<li type="disc"> [Reviewer] International Conference on Artificial Intelligence and Statistics (AISTATS), 2021, 2024. </li>
+		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM), 2022, 2024.</li>
 		<li type="disc"> [Reviewer] International Conference on Learning Representations (ICLR), 2024.</li>
 		<li type="disc"> [Reviewer] The Conference on Neural Information Processing Systems (NeurIPS), 2023.</li>
 		<li type="disc"> [PC Member on Research and Applied Science Tracks] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
@@ -305,7 +306,6 @@
 		<li type="disc"> [PC Member] IEEE International Conference on Big Data (BigData), 2021-2023.</li>
 		<li type="disc"> [PC Member] IEEE International Conference on Data Mining (ICDM), 2021-2023.</li>
 		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI), 2022.</li>
-		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM), 2022.</li>
 		<li type="disc"> [PC Member] International Conference on Web Search and Data Mining (WSDM), 2022.</li>
 		<li type="disc"> [Reviewer] International Conference on Intelligent Computing (ICIC), 2023.</li>
 		<li type="disc"> [TPC Member] International Congress on Blockchain and Applications (BLOCKCHAIN), 2022.</li>
