--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[09/2023] I will serve as a reviewer for AAAI 2024. </li>
 	<li type="circle">[09/2023] I will serve as a reviewer for ICASSP 2024. </li>
 	<li type="circle">[09/2023] I will serve as a PC member for SDM 2024. </li>
 	<li type="circle">[09/2023] I will serve as a reviewer for AISTATS 2024. </li>
@@ -295,6 +296,7 @@
 <h2>Academic Services</h2>
   <h3>Conference PC Member and Reviewer</h3>
     	<ul>
+		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI), 2022, 2024.</li>
 		<li type="disc"> [Reviewer] IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2024. </li>
 		<li type="disc"> [Reviewer] International Conference on Artificial Intelligence and Statistics (AISTATS), 2021, 2024. </li>
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM), 2022, 2024.</li>
