--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[09/2023] A recent work (semantic OOD detection in unseen domains) has been uploaded to Arxiv (arXiv:2309.10209). </li>
 	<li type="circle">[09/2023] I will serve as a reviewer for AAAI 2024. </li>
 	<li type="circle">[09/2023] I will serve as a reviewer for ICASSP 2024. </li>
 	<li type="circle">[09/2023] I will serve as a PC member for SDM 2024. </li>
@@ -276,6 +277,11 @@
 
 	
 <h3>ArXiv Preprints</h3>
+<p>
+	<strong>[ArXiv preprint]</strong> Towards Effective Semantic OOD Detection in Unseen Domains: A Domain Generalization Perspective. <a class="btn btn-red" href="https://arxiv.org/pdf/2309.10209.pdf">PDF</a></br>
+	Haoliang Wang, <font color=red>Chen Zhao</font>, Yunhui Guo, Kai Jiang, Feng Chen<br/>
+	<em>ArXiv preprint, 2309.10209</em>, 2023
+</p>
 <p>
 	<strong>[ArXiv preprint]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. <a class="btn btn-red" href="https://arxiv.org/pdf/2301.08824.pdf">PDF</a></br>
 	Feng Mi, <font color=red>Chen Zhao</font>, Zhuoyi Wang, Sadaf MD Halim, Xiaodi Li, Zhouxiang Wu, Latifur Khan, Bhavani Thuraisingham<br/>
