--- a/index.html
+++ b/index.html
@@ -163,6 +163,16 @@
 <h2>Publications</h2>
 
 <h3>Conferences</h3>
+<strong>2023</strong>
+<ol>
+	<li>
+		<strong>[CIKM'23]</strong> Adaptation Speed Analysis for Fairness-aware Causal Models. <a class="btn btn-red" href="https://arxiv.org/pdf/2308.16879.pdf">PDF</a></br>
+		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao and Haifeng Chen.<br/>
+		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper, oral</strong>), 2023
+	</li>
+</ol>
+
+	
 <p>
 	<strong>[CIKM'23]</strong> Adaptation Speed Analysis for Fairness-aware Causal Models. <a class="btn btn-red" href="https://arxiv.org/pdf/2308.16879.pdf">PDF</a></br>
 	Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao and Haifeng Chen.<br/>
