--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
 	<li>
 		<strong>[CIKM'23]</strong> Adaptation Speed Analysis for Fairness-aware Causal Models. <a class="btn btn-red" href="https://arxiv.org/pdf/2308.16879.pdf">PDF</a></br>
 		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao and Haifeng Chen.<br/>
-		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper, oral</strong>), 2023
+		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper</strong>), 2023
 	</li>
 	<li>
 		<strong>[CIKM'23]</strong> Contrastive Representation Learning Based on Multiple Node-centered Subgraphs. <a class="btn btn-red" href="https://arxiv.org/pdf/2308.16441.pdf">PDF</a></br>
 		Dong Li, Wenjun Wang, Minglai Shao, <font color=red>Chen Zhao</font>.<br/>
-		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper, oral</strong>), 2023
+		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper</strong>), 2023
 	</li>
 	<li>
 		<strong>[KDD'23]</strong> Towards Fair Disentangled Online Learning for Changing Environments. <a class="btn btn-red" href="https://arxiv.org/pdf/2306.01007.pdf">PDF</a></br>
@@ -274,7 +274,7 @@
 	<li>
 		<strong>[ICDM'20]</strong> A Primal-Dual Subgradient Approach for Fair Meta Learning. <a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v3">PDF</a></br>
 		<font color=red>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
-		<em>In Proceedings of the IEEE International Conference on Data Mining</em>, 2020
+		<em>In Proceedings of the IEEE International Conference on Data Mining</em>(<strong>full paper</strong>), 2020
 	</li>
 	<li>
 		<strong>[ICKG'20]</strong> Fair Meta-Learning for Few-Shot Classification. <a class="btn btn-red" href="https://arxiv.org/abs/2009.13516">PDF</a></br>
@@ -293,7 +293,7 @@
 	<li>
 		<strong>[ICDM'19]</strong> Rank-Based Multi-task Learning for Fair Regression. <a class="btn btn-red" href="https://arxiv.org/abs/2009.11405">PDF</a></br>
 		<font color=red>Chen Zhao</font>, Feng Chen<br/>
-		<em>In Proceedings of the IEEE International Conference on Data Mining</em>, 2019
+		<em>In Proceedings of the IEEE International Conference on Data Mining</em>(<strong>full paper</strong>), 2019
 	</li>
 	<li>
 		<strong>[Development'17]</strong> CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane. <a class="btn btn-red" href="https://journals.biologists.com/dev/article/144/9/1635/48420/CDC42-is-required-for-epicardial-and-pro?searchresult=1">PDF</a></br>
