--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <strong>2023</strong>
 <ol>
 	<li>
-		<strong>[ArXiv preprint]</strong> Towards Effective Semantic OOD Detection in Unseen Domains: A Domain Generalization Perspective. <a class="btn btn-red" href="https://arxiv.org/pdf/2309.10209.pdf">PDF</a></br>
+		<strong>[ArXiv]</strong> Towards Effective Semantic OOD Detection in Unseen Domains: A Domain Generalization Perspective. <a class="btn btn-red" href="https://arxiv.org/pdf/2309.10209.pdf">PDF</a></br>
 		Haoliang Wang, <font color=red>Chen Zhao</font>, Yunhui Guo, Kai Jiang, Feng Chen<br/>
 		<em>ArXiv preprint, 2309.10209</em>, 2023
 	</li>
@@ -210,7 +210,7 @@
 		<em>In Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing</em>, 2023
 	</li>
 	<li>
-		<strong>[ArXiv preprint]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. <a class="btn btn-red" href="https://arxiv.org/pdf/2301.08824.pdf">PDF</a></br>
+		<strong>[ArXiv]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. <a class="btn btn-red" href="https://arxiv.org/pdf/2301.08824.pdf">PDF</a></br>
 		Feng Mi, <font color=red>Chen Zhao</font>, Zhuoyi Wang, Sadaf MD Halim, Xiaodi Li, Zhouxiang Wu, Latifur Khan, Bhavani Thuraisingham<br/>
 		<em>ArXiv preprint, 2301.08824</em>, 2023
 	</li>
@@ -224,7 +224,7 @@
 		<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2022
 	</li>
 	<li>
-		<strong>[ArXiv preprint]</strong> xFBD: Focused Building Damage Dataset and Analysis. <a class="btn btn-red" href="https://arxiv.org/pdf/2212.13876.pdf">PDF</a></br>
+		<strong>[ArXiv]</strong> xFBD: Focused Building Damage Dataset and Analysis. <a class="btn btn-red" href="https://arxiv.org/pdf/2212.13876.pdf">PDF</a></br>
 		Dennis Melamed, Cameron Johnson, <font color=red>Chen Zhao</font>, Russell Blue, Philip Morrone, Anthony Hoogs, Brian Clipp<br/>
 		<em>ArXiv preprint, 2212.13876</em>, 2022
 	</li>
@@ -267,7 +267,7 @@
 <strong>2020</strong>
 <ol>
 	<li>
-		<strong>[ArXiv preprint]</strong> PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning. <a class="btn btn-red" href="https://arxiv.org/pdf/2009.12675v2.pdf">PDF</a></br>
+		<strong>[ArXiv]</strong> PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning. <a class="btn btn-red" href="https://arxiv.org/pdf/2009.12675v2.pdf">PDF</a></br>
 		<font color=red>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
 		<em>ArXiv preprint, 2009.12675v2</em>, 2020
 	</li>
