--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[09/2023] A recent work (counterfactual fairness in time series) has been uploaded to Arxiv (arXiv:2309.13005). </li>
 	<li type="circle">[09/2023] A recent work (semantic OOD detection in unseen domains) has been uploaded to Arxiv (arXiv:2309.10209). </li>
 	<li type="circle">[09/2023] I will serve as a reviewer for AAAI 2024. </li>
 	<li type="circle">[09/2023] I will serve as a reviewer for ICASSP 2024. </li>
@@ -164,6 +165,11 @@
 
 <strong>2023</strong>
 <ol>
+	<li>
+		<strong>[ArXiv]</strong> Pursuing Counterfactual Fairness via Sequential Autoencoder Across Domains. <a class="btn btn-red" href="https://arxiv.org/pdf/2309.13005.pdf">PDF</a></br>
+		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Baoluo Meng, Xujiang Zhao, Haifeng Chen<br/>
+		<em>ArXiv preprint, 2309.13005</em>, 2023
+	</li>
 	<li>
 		<strong>[ArXiv]</strong> Towards Effective Semantic OOD Detection in Unseen Domains: A Domain Generalization Perspective. <a class="btn btn-red" href="https://arxiv.org/pdf/2309.10209.pdf">PDF</a></br>
 		Haoliang Wang, <font color=red>Chen Zhao</font>, Yunhui Guo, Kai Jiang, Feng Chen<br/>
