--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[10/2023] I will serve as a reviewer for NeurIPS Worksop on Diffusion Models 2023. </li>
 	<li type="circle">[09/2023] A recent work (counterfactual fairness in time series) has been uploaded to Arxiv (arXiv:2309.13005). </li>
 	<li type="circle">[09/2023] A recent work (semantic OOD detection in unseen domains) has been uploaded to Arxiv (arXiv:2309.10209). </li>
 	<li type="circle">[09/2023] I will serve as a reviewer for AAAI 2024. </li>
@@ -342,6 +343,7 @@
 	</ul>
   <h3>Workshop Reviewer</h3>
 	<ul>
+		<li type="disc"> [Reviewer] NeurIPS Workshop on Diffusion Models, 2023.</li>
 		<li type="disc"> [Reviewer] ICML Workshop on Structured Probabilistic Inference & Generative Modeling (SPIGM), 2023.</li>
 		<li type="disc"> [Reviewer] WACV Workshop on Dealing with Novelty in Open Worlds, 2022-2023.</li>
 		<li type="disc"> [Reviewer] AutoML Workshop on Late-Breaking, 2022.</li>
