--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[10/2023] I will serve as a Program Committee for PAKDD 2024. </li>
 	<li type="circle">[10/2023] I will serve as a reviewer for NeurIPS Worksop on Diffusion Models 2023. </li>
 	<li type="circle">[09/2023] A recent work (counterfactual fairness in time series) has been uploaded to Arxiv (arXiv:2309.13005). </li>
 	<li type="circle">[09/2023] A recent work (semantic OOD detection in unseen domains) has been uploaded to Arxiv (arXiv:2309.10209). </li>
@@ -321,13 +322,15 @@
 <h2>Academic Services</h2>
   <h3>Conference PC Member and Reviewer</h3>
     	<ul>
+		<li type="disc"> [PC Member] Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), 2024.</li>
 		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI), 2022, 2024.</li>
 		<li type="disc"> [Reviewer] IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2024. </li>
 		<li type="disc"> [Reviewer] International Conference on Artificial Intelligence and Statistics (AISTATS), 2021, 2024. </li>
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM), 2022, 2024.</li>
 		<li type="disc"> [Reviewer] International Conference on Learning Representations (ICLR), 2024.</li>
 		<li type="disc"> [Reviewer] The Conference on Neural Information Processing Systems (NeurIPS), 2023.</li>
-		<li type="disc"> [PC Member on Research and Applied Science Tracks] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
+		<li type="disc"> [PC Member on Research Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
+		<li type="disc"> [PC Member on Applied Science Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
 		<li type="disc"> [PC Member] European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023.</li>
 		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI), 2023.</li>
 		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV), 2023.</li>
