--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[10/2023] I was invited to give an academic talk at the Data Science Seminar by Baylor University, Waco TX. </li>
 	<li type="circle">[10/2023] I will serve as a Program Committee for PAKDD 2024. </li>
 	<li type="circle">[10/2023] I will serve as a reviewer for NeurIPS Worksop on Diffusion Models 2023. </li>
 	<li type="circle">[09/2023] A recent work (counterfactual fairness in time series) has been uploaded to Arxiv (arXiv:2309.13005). </li>
@@ -377,6 +378,7 @@
 <h2>Academic Talks</h2>
   <h3>Invited Talks</h3>
 	<ul>
+		<li type="disc">10/2023: Baylor University, Data Science Seminar, Waco TX, USA.</li>
 		<li type="disc">07/2023: AI TIME, Beijing, China.</li>
 		<li type="disc">05/2023: Yunnan University, School of Information Science and Engineering, Kunming, China.</li>
 		<li type="disc">05/2023: Southwestern University of Finance and Economics, School of Business Administration, Chengdu, China.</li>
