--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[10/2023] I will serve as a reviewer for WWW 2024. </li>
 	<li type="circle">[10/2023] I was invited to give an academic talk at the Data Science Seminar by Baylor University, Waco TX. </li>
 	<li type="circle">[10/2023] I will serve as a Program Committee for PAKDD 2024. </li>
 	<li type="circle">[10/2023] I will serve as a reviewer for NeurIPS Worksop on Diffusion Models 2023. </li>
@@ -323,6 +324,7 @@
 <h2>Academic Services</h2>
   <h3>Conference PC Member and Reviewer</h3>
     	<ul>
+		<li type="disc"> [PC Member] The Web Conference (WWW), 2024.</li>
 		<li type="disc"> [PC Member] Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), 2024.</li>
 		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI), 2022, 2024.</li>
 		<li type="disc"> [Reviewer] IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2024. </li>
