--- a/index.html
+++ b/index.html
@@ -121,13 +121,14 @@
 		<br>
 		His research focuses on machine learning, data mining, and artificial intelligence, particularly fairness-aware machine learning, novelty detection, and domain generalization.
 		His publications have appeared in prestigious conferences and journals, including KDD, CVPR, WWW, AAAI, ICDM, ICASSP, etc. 
-		He has served as PC members for several international conferences and workshops, such as NeurIPS, KDD, AAAI, IJCAI, ICML, etc.
+		He has served as a PC member for several international conferences and workshops, such as NeurIPS, KDD, AAAI, IJCAI, ICML, etc.
 	</p>
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[11/2023] I will serve as one of the organizers for the 3rd Southwest Data Science Conference, 2024. </li>
 	<li type="circle">[10/2023] I will serve as a reviewer for WWW 2024. </li>
-	<li type="circle">[10/2023] I was invited to give an academic talk at the Data Science Seminar by Baylor University, Waco TX. </li>
+	<li type="circle">[10/2023] I was invited to give an academic talk at the Data Science Seminar by Baylor University, Waco, TX. </li>
 	<li type="circle">[10/2023] I will serve as a Program Committee for PAKDD 2024. </li>
 	<li type="circle">[10/2023] I will serve as a reviewer for NeurIPS Worksop on Diffusion Models 2023. </li>
 	<li type="circle">[09/2023] A recent work (counterfactual fairness in time series) has been uploaded to Arxiv (arXiv:2309.13005). </li>
@@ -150,16 +151,16 @@
 	<li type="circle">[04/2023] I will join Baylor University as a tenure-track Assistant Professor in the Department of Computer Science. </li>
 	<li type="circle">[04/2023] I will serve as a reviewer for NeurIPS 2023. </li>
 	<li type="circle">[04/2023] I was invited to give an academic talk by Indiana State University, Terre Haute, IN. </li>
-	<li type="circle">[03/2023] I was invited to give an academic talk by SUNY at Albany, Albany NY. </li>
-	<li type="circle">[03/2023] I was invited to give an academic talk by Tennessee State University, Nashville TN. </li>
+	<li type="circle">[03/2023] I was invited to give an academic talk by SUNY at Albany, Albany, NY. </li>
+	<li type="circle">[03/2023] I was invited to give an academic talk by Tennessee State University, Nashville, TN. </li>
 	<li type="circle">[03/2023] Two workshop proposals were accepted by KDD 2023. I will serve as organizer and chair. </li>
 	<li type="circle">[03/2023] I will serve as a PC member for IEEE Bigdata 2023. </li>
 	<li type="circle">[02/2023] One paper was accepted by CVPR 2023. </li>
 	<li type="circle">[02/2023] I will serve as a PC member for ICDM 2023. </li>
 	<li type="circle">[02/2023] I will serve as a PC member for ECMLPKDD 2023. </li>
-	<li type="circle">[02/2023] I was invited to give an academic talk by Baylor University, Waco TX. </li>
+	<li type="circle">[02/2023] I was invited to give an academic talk by Baylor University, Waco, TX. </li>
 	<li type="circle">[02/2023] One paper was accepted by ICASSP 2023. </li>
-	<li type="circle">[02/2023] I was invited to give an academic talk by the University of Mississippi, Oxford MS. </li>
+	<li type="circle">[02/2023] I was invited to give an academic talk by the University of Mississippi, Oxford, MS. </li>
 	<li type="circle">[01/2023] I will serve as a PC member (applied data science track) for ACM SIGKDD 2023. </li>
 	<li type="circle">[12/2022] I will serve as a PC member (research track) for ACM SIGKDD 2023. </li>
     </ul>
@@ -368,6 +369,7 @@
 	</ul>
   <h3>Others</h3>
 	<ul>
+		<li type="disc"> [<font color=red>Orgnizer</font>] The Southwest Data Science Conference, 2024.</li>
 		<li type="disc"> [<font color=red>Session Chair</font> at ADS] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
