--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-	<li type="circle">[11/2023] I will serve as one of the Co-PIs for the Center on Responsible artificial intelligence and Goverance (CRaiG), supported by the NSF IUCRC program. </li>
+	<li type="circle">[11/2023] I will serve as one of the Co-PIs for the Center on Responsible artificial intelligence and Governance (CRaiG), supported by the NSF IUCRC program. </li>
 	<li type="circle">[11/2023] I will serve as one of the organizers for the 3rd Southwest Data Science Conference, 2024. </li>
 	<li type="circle">[10/2023] I will serve as a reviewer for WWW 2024. </li>
 	<li type="circle">[10/2023] I was invited to give an academic talk at the Data Science Seminar by Baylor University, Waco, TX. </li>
