--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <ol>
 	<li>
 		<strong>[ArXiv]</strong> Fairness-Aware Domain Generalization under Covariate and Dependence Shifts. <a class="btn btn-red" href="https://arxiv.org/pdf/2311.13816.pdf">PDF</a></br>
-		Yujie Lin, <font color=red>Chen Zhao</font>, Kai Jiang, Xintao Wu, Haoliang Wang, Latifur Khan, Christan Grant, Feng Chen<br/>
+		<font color=red>Chen Zhao</font>, Kai Jiang, Xintao Wu, Haoliang Wang, Latifur Khan, Christan Grant, Feng Chen<br/>
 		<em>ArXiv preprint, 2311.13816</em>, 2023
 	</li>
 	
