--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 	<li type="circle">[11/2023] A recent work (fairness in domain generalization) has been uploaded to Arxiv (arXiv:2311.13816). </li>
 	<li type="circle">[11/2023] I will serve as one of the Co-PIs for the Center on Responsible artificial intelligence and Governance (CRaiG), supported by the NSF IUCRC program. </li>
 	<li type="circle">[11/2023] I will serve as one of the organizers for the 3rd Southwest Data Science Conference, 2024. </li>
+	<li type="circle">[11/2023] A paper is accepted by NeurIPS workshop AFT. </li>
 	<li type="circle">[10/2023] I will serve as a reviewer for WWW 2024. </li>
 	<li type="circle">[10/2023] I was invited to give an academic talk at the Data Science Seminar by Baylor University, Waco, TX. </li>
 	<li type="circle">[10/2023] I will serve as a Program Committee for PAKDD 2024. </li>
@@ -175,11 +176,15 @@
 <strong>2023</strong>
 <ol>
 	<li>
+		<strong>[NeurIPS'23-W]</strong> Achieving Counterfactual Fairness in Changing Environments via Sequential Autoencoder. </br>
+		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao, Baoluo Meng, Haifeng Chen<br/>
+		<em>NeurIPS Workshop on Algorithmic Fairness through the Lens of Time (AFT))</em>, 2023
+	</li>
+	<li>
 		<strong>[ArXiv]</strong> Fairness-Aware Domain Generalization under Covariate and Dependence Shifts. <a class="btn btn-red" href="https://arxiv.org/pdf/2311.13816.pdf">PDF</a></br>
 		<font color=red>Chen Zhao</font>, Kai Jiang, Xintao Wu, Haoliang Wang, Latifur Khan, Christan Grant, Feng Chen<br/>
 		<em>ArXiv preprint, 2311.13816</em>, 2023
 	</li>
-	
 	<li>
 		<strong>[ArXiv]</strong> Pursuing Counterfactual Fairness via Sequential Autoencoder Across Domains. <a class="btn btn-red" href="https://arxiv.org/pdf/2309.13005.pdf">PDF</a></br>
 		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Baoluo Meng, Xujiang Zhao, Haifeng Chen<br/>
