--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 	<li>
 		<strong>[NeurIPS'23-W]</strong> Achieving Counterfactual Fairness in Changing Environments via Sequential Autoencoder. </br>
 		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao, Baoluo Meng, Haifeng Chen<br/>
-		<em>NeurIPS Workshop on Algorithmic Fairness through the Lens of Time (AFT))</em>, 2023
+		<em>NeurIPS Workshop on Algorithmic Fairness through the Lens of Time (AFT)</em>, 2023
 	</li>
 	<li>
 		<strong>[ArXiv]</strong> Fairness-Aware Domain Generalization under Covariate and Dependence Shifts. <a class="btn btn-red" href="https://arxiv.org/pdf/2311.13816.pdf">PDF</a></br>
