--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[12/2023] I will serve as a reviewer for the Journal of Data-centric Machine Learning Research. </li>
 	<li type="circle">[11/2023] A recent work (fairness in domain generalization) has been uploaded to Arxiv (arXiv:2311.13816). </li>
 	<li type="circle">[11/2023] I will serve as one of the Co-PIs for the Center on Responsible artificial intelligence and Governance (CRaiG), supported by the NSF IUCRC program. </li>
 	<li type="circle">[11/2023] I will serve as one of the organizers for the 3rd Southwest Data Science Conference, 2024. </li>
@@ -373,7 +374,8 @@
 	</ul>
   <h3>Journal Reviewer</h3>
     	<ul>
-		<li type="disc"> [Reviewer] Transactions on Knowledge Discovery from Data (TKDD), 2023. </li>
+		<li type="disc"> [Reviewer] Journal of Data-centric Machine Learning Research (DMLR), 2023. </li>
+		<li type="disc"> [Reviewer] ACM Transactions on Knowledge Discovery from Data (TKDD), 2023. </li>
 		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data, 2022-2023. </li>
 		<li type="disc"> [Reviewer] Journal of Knowledge-based Systems (KBS), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2022. </li>
