--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[01/2024] I will serve as a panelist for an NSF panel. </li>
 	<li type="circle">[12/2023] I will serve as a reviewer for the Journal of Data-centric Machine Learning Research. </li>
+	<li type="circle">[11/2023] I will serve as a panelist for an NSF panel. </li>
 	<li type="circle">[11/2023] A recent work (fairness in domain generalization) has been uploaded to Arxiv (arXiv:2311.13816). </li>
 	<li type="circle">[11/2023] I will serve as one of the Co-PIs for the Center on Responsible artificial intelligence and Governance (CRaiG), supported by the NSF IUCRC program. </li>
 	<li type="circle">[11/2023] I will serve as one of the organizers for the 3rd Southwest Data Science Conference, 2024. </li>
@@ -386,6 +388,7 @@
 	</ul>
   <h3>Others</h3>
 	<ul>
+		<li type="disc"> [<font color=red>Panelist</font>] National Science Foundation panels, 2023 - 2024.</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>] The Southwest Data Science Conference, 2024.</li>
 		<li type="disc"> [<font color=red>Session Chair</font> at ADS] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
