--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
 	<li type="circle">[01/2024] I will serve as a panelist for an NSF panel. </li>
+	<li type="circle">[12/2023] A paper is accepted by TKDD. </li>
 	<li type="circle">[12/2023] I will serve as a reviewer for the Journal of Data-centric Machine Learning Research. </li>
 	<li type="circle">[11/2023] I will serve as a panelist for an NSF panel. </li>
 	<li type="circle">[11/2023] A recent work (fairness in domain generalization) has been uploaded to Arxiv (arXiv:2311.13816). </li>
@@ -176,6 +177,15 @@
 
 <h2>Publications</h2>
 
+<strong>2024</strong>
+<ol>
+	<li>
+		<strong>[TKDD'24]</strong> Dynamic Environment Responsive Online Meta-Learning with Fairness Awareness. (To appear)</br>
+		<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen.<br/>
+		<em>The ACM Transactions on Knowledge Discovery from Data</em>, 2024
+	</li>
+<\ol>
+	
 <strong>2023</strong>
 <ol>
 	<li>
