--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
 	<li type="circle">[01/2024] I will serve as a panelist for an NSF panel. </li>
+	<li type="circle">[12/2023] I will serve as a reviewer for IJCAI, 2024. </li>
 	<li type="circle">[12/2023] A paper is accepted by TKDD. </li>
 	<li type="circle">[12/2023] I will serve as a reviewer for the Journal of Data-centric Machine Learning Research. </li>
 	<li type="circle">[11/2023] I will serve as a panelist for an NSF panel. </li>
@@ -353,6 +354,7 @@
 <h2>Academic Services</h2>
   <h3>Conference PC Member and Reviewer</h3>
     	<ul>
+		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI), 2023-2024.</li>
 		<li type="disc"> [PC Member] The Web Conference (WWW), 2024.</li>
 		<li type="disc"> [PC Member] Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), 2024.</li>
 		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI), 2022, 2024.</li>
@@ -364,7 +366,6 @@
 		<li type="disc"> [PC Member on Research Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
 		<li type="disc"> [PC Member on Applied Science Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
 		<li type="disc"> [PC Member] European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023.</li>
-		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI), 2023.</li>
 		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV), 2023.</li>
 		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM), 2022-2023.</li>
 		<li type="disc"> [PC Member] IEEE International Conference on Big Data (BigData), 2021-2023.</li>
