--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
 	<li type="circle">[01/2024] I will serve as a panelist for an NSF panel. </li>
+	<li type="circle">[12/2023] I will serve as a reviewer for ICML, 2024. </li>
 	<li type="circle">[12/2023] I will serve as a reviewer for IJCAI, 2024. </li>
 	<li type="circle">[12/2023] A paper is accepted by TKDD. </li>
 	<li type="circle">[12/2023] I will serve as a reviewer for the Journal of Data-centric Machine Learning Research. </li>
@@ -354,6 +355,7 @@
 <h2>Academic Services</h2>
   <h3>Conference PC Member and Reviewer</h3>
     	<ul>
+		<li type="disc"> [PC Member] International Conference on Machine Learning (ICML), 2024.</li>
 		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI), 2023-2024.</li>
 		<li type="disc"> [PC Member] The Web Conference (WWW), 2024.</li>
 		<li type="disc"> [PC Member] Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), 2024.</li>
